[project]
name = "wechat-ticket-assistant"
version = "0.1.0"
description = "Windows WeChat mini-program ticket submission desktop automation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pywinauto==0.6.9",
    "pyautogui==0.9.54",
    "mss==10.1.0",
    "opencv-python==4.11.0.86",
    "numpy==1.26.4",
    "pillow==10.4.0",
    "pygetwindow==0.0.9",
]

[tool.uv]
package = false
